--- a/_posts/2019-11-21-2.md
+++ b/_posts/2019-11-21-2.md
@@ -3,7 +3,7 @@ title:        "TIL2"
 description:  "TIL test 2"
 image:        "http://placehold.it/400x200"
 author:       "Jhonathan"
-permalink: /TIL/2
+catagories: TIL
 ---
 
 TIL 2
