--- a/_posts/2019-11-21-post-3.md
+++ b/_posts/2019-11-21-post-3.md
@@ -3,7 +3,7 @@ title:        "Post3"
 description:  "Post test 3"
 image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 author:       "myself"
-permalink: /post/3
+catagories: posts
 
 ---
 
