--- a/_posts/TIL/2019-11-21-TIL23.md
+++ b/_posts/TIL/2019-11-21-TIL23.md
@@ -1,9 +1,9 @@
 ---
-title:        "Post3"
-description:  "Post test 3"
+title:        "TIL23"
+description:  "TIL test 23"
 image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 author:       "myself"
-catagories: posts
+category: TIL
 
 ---
 
