--- a/_posts/TIL/2019-11-21-TIL25.md
+++ b/_posts/TIL/2019-11-21-TIL25.md
@@ -1,9 +1,9 @@
 ---
-title:        "Post2"
-description:  "Post test 2"
+title:        "TIL25"
+description:  "TIL test 25"
 image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 author:       "myself"
-catagories: post
+category: TIL
 
 ---
 
