--- a/_posts/post/2019-11-19-1-24.md
+++ b/_posts/post/2019-11-19-1-24.md
@@ -3,7 +3,7 @@ title:        "24"
 description:  "My determination as I learn to be a developer"
 image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 author:       "myself"
-catagories: posts
+category: posts
 
 
 ---
