--- a/_posts/post/2019-11-21-1-23.md
+++ b/_posts/post/2019-11-21-1-23.md
@@ -3,7 +3,7 @@ title:        "Post23"
 description:  "Post test 23"
 image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 author:       "myself"
-catagories: post
+category: posts
 
 ---
 
