--- a/_posts/TIL/2019-11-19-TIL24.md
+++ b/_posts/TIL/2019-11-19-TIL24.md
@@ -1,10 +1,10 @@
 ---
 title:        "TIL24"
-description:  "TILMy determination as I learn to be a developer"
+description:  "TIL 24 description"
 image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 author:       "myself"
 category: TIL
-
+source: www.google.com
 
 ---
 
