--- a/_posts/TIL/2019-11-26-TIL.md
+++ b/_posts/TIL/2019-11-26-TIL.md
@@ -1,16 +1,15 @@
 ---
 layout: TIL
-title:        "TIL"
+title: "TIL"
 category: TIL
 ---
 
+오늘도 to do list 를 만들고 있었습니다. 
+<https://freshman.tech/todo-list/> 의 예제를 따라 해서 만들고 있었으나 완성도 못하였고 대략적인 맥락만 이해하고 있습니다.
 
 Facts:  
-
-오늘도 to do list 를 만들고 있었습니다. https://freshman.tech/todo-list/ 의 예제를 따라 해서 만들고 있었으나 완성도 못하였고 대략적인 맥락만 이해하고 있습니다.
-
 querySelector A DOMString containing one or more selectors to match. This string must be a valid CSS selector string
-https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelectorAll
+<https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelectorAll>
 
 addEventListener() 는 document내에 특정요소에 event를 등록할때 사용합니다.
 
@@ -26,20 +25,20 @@ position 에 들어가는 attribute 는 4개
   element 안에 가장 마지막 child
   'afterend'
   element 뒤에
- https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML
+ <https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML>
 
 Template literals 
 내장된 표현식을 허용하는 문자열 리터럴입니다
 여러 줄로 이뤄진 문자열과 문자 보간기능을 사용할 수 있습니다.
 변하는 문자를 쓸려면 template literal 을 써야한다.
-https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals
+<https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals>
 
 label
 label은 폼의 양식에 이름 붙이는 태그입니다.
 주요 속성은 for입니다.
 label의 for의 값과 양식의 id의 값이 같으면 연결됩니다.
 label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체크를 하거나 체크를 해제합니다.
-https://www.codingfactory.net/11008
+<https://www.codingfactory.net/11008>
 
 
 Feelings: 머리 빠지는 이 느낌은 뭘까요.
