--- a/_posts/TIL/2019-11-25-TIL.md
+++ b/_posts/TIL/2019-11-25-TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: TIL
-title:        "TIL"
+title: "19-11-25"
 #description:  "TIL 1"
 #image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
 #author:       "myself"
