--- a/_posts/TIL/2019-11-25-TIL.md
+++ b/_posts/TIL/2019-11-25-TIL.md
@@ -1,36 +1,46 @@
 ---
 layout: TIL
 title: "19-11-25"
-#description:  "TIL 1"
-#image:        "https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-#author:       "myself"
 category: TIL
-#source: https://www.youtube.com/watch?v=rcRiJSaPwbc&list=PLWjCJDeWfDdfVEcLGAfdJn_HXyM4Y7_k-&index=19
 ---
 
+오늘은 주로 javascript를 이용해서 To do List 를 만들려고 했습니다. 
 
-Facts: 오늘은 주로 javascript를 이용해서 To do List 를 만들려고 했습니다. 
+----
+<h3>Facts</h3> 
 
-dom 이란 웹페이지를 로드 했을떄 만들어진다. 형태는 트리에 가깝다.
-html element 를 변경 제외 추가 등을 할수 있다. 
 
-css style 등을 변경 추가 등을 할수 있다.
+[Dom](https://developer.mozilla.org/ko/docs/Web/API/Document_Object_Model)
+
+<p><li>dom 이란 웹페이지를 로드 했을떄 만들어진다. 형태는 트리에 가깝다.
+html element 를 변경 제외 추가 등을 할수 있다.</li></p> 
+
+[CSS](https://developer.mozilla.org/ko/docs/Web/CS)
+<li>Css style 등을 변경 추가 등을 할수 있다.
 href, src, alt, custom 등을 읽고 변경 할수 있다. 
-이벤트 리스너도 넣을수 있다고한다. 
+이벤트 리스너도 넣을수 있다고한다. </li>
 
-const store= document.getElementById("a") - a의 id를 불러서 store 에 저장
-parent.appendchild(a) 로 a 의 것들을 parent 에 추가한다.
+[getElementById](https://developer.mozilla.org/ko/docs/Web/API/Document/getElementById)
+<li>const store= document.getElementById("a") - a의 id를 불러서 store 에 저장
+parent.appendchild(a) 로 a 의 것들을 parent 에 추가한다.</li>
+ 
 
-https://developer.mozilla.org/ko/docs/Web/API/Document_Object_Model/%EC%86%8C%EA%B0%9C
+----
+<h3>Feelings</h3> 너무 어렵다 머리가 굳어서 이해를 못하는걸까.
 
-Feelings: 너무 어렵다 머리가 굳어서 이해를 못하는걸까.
+---
 
-Findings: 예제나 설명 글들 중 하나에만 너무 치우쳐서 공부를 하면 이해하기가 어렵다.
+<h3>Findings</h3> 예제나 설명 글들 중 하나에만 너무 치우쳐서 공부를 하면 이해하기가 어렵다.
 
-Future Action Plan: 예제랑 설명들을 적절히 섞어서 공부하자. 그리고 쉬운 예제 부터 따서 작성 후 나중에 더 어려운걸로 하자.
+-----
 
-Feedback: 내일은 잘됬으면...
+<h3>Future Action Plan</h3> 예제랑 설명들을 적절히 섞어서 공부하자. 그리고 쉬운 예제 부터 따서 작성 후 나중에 더 어려운걸로 하자.
 
+----
+
+<h3>Feedback</h3> 내일은 잘됬으면...
+
+-----
 
 <!--
 <p>_layout 에 대하여</p>
