--- a/_posts/TIL/2019-11-26-TIL.md
+++ b/_posts/TIL/2019-11-26-TIL.md
@@ -7,45 +7,59 @@ category: TIL
 오늘도 to do list 를 만들고 있었습니다. 
 <https://freshman.tech/todo-list/> 의 예제를 따라 해서 만들고 있었으나 완성도 못하였고 대략적인 맥락만 이해하고 있습니다.
 
-Facts:  
-querySelector A DOMString containing one or more selectors to match. This string must be a valid CSS selector string
-<https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelectorAll>
+----
 
-addEventListener() 는 document내에 특정요소에 event를 등록할때 사용합니다.
+<h3>Facts</h3>
 
-문장 단위로 텍스트 영역을 지정하는것 div, span. 차이점은 div는 줄 바꿈이 되지만, span은 줄 바꿈이 되지 않는걸 알게 되었습니다.
+[querySelector](https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelectorAll)
+<li>querySelector A DOMString containing one or more selectors to match. This string must be a valid CSS selector string</li>
 
-insertAdjacentHTML(position, text) this method allows us to add some HTML to the DOM using an already present element as a reference point
-position 에 들어가는 attribute 는 4개   
-  'beforebegin'
-  element 앞에 
-  'afterbegin'
-  element 안에 가장 첫번째 child
-  'beforeend'
-  element 안에 가장 마지막 child
-  'afterend'
-  element 뒤에
- <https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML>
+[addEventListener](https://developer.mozilla.org/ko/docs/Web/API/EventTarget/addEventListener)
+<li>addEventListener() 는 document내에 특정요소에 event를 등록할때 사용합니다.</li>
 
-Template literals 
-내장된 표현식을 허용하는 문자열 리터럴입니다
+[div, span](https://lktprogrammer.tistory.com/88)
+<li>문장 단위로 텍스트 영역을 지정하는것 div, span. 차이점은 div는 줄 바꿈이 되지만, span은 줄 바꿈이 되지 않는걸 알게 되었습니다.</li>
+
+[insertAdjacentHTML](https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML)
+<li>insertAdjacentHTML(position, text) this method allows us to add some HTML to the DOM using an already present element as a reference point</li>
+<li>position 에 들어가는 attribute 는 4개   
+  <ol><li>'beforebegin'
+  element 앞에 </li>
+  <li>'afterbegin'
+  element 안에 가장 첫번째 child</li>
+  <li>'beforeend'
+  element 안에 가장 마지막 child</li>
+  <li>'afterend'
+  element 뒤에</li>
+  </ol>
+</li>
+
+
+[Template literals](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals) 
+<li>내장된 표현식을 허용하는 문자열 리터럴입니다
 여러 줄로 이뤄진 문자열과 문자 보간기능을 사용할 수 있습니다.
-변하는 문자를 쓸려면 template literal 을 써야한다.
-<https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals>
+변하는 문자를 쓸려면 template literal 을 써야한다.</li>
 
-label
-label은 폼의 양식에 이름 붙이는 태그입니다.
+[label](https://www.codingfactory.net/11008)
+<li>label은 폼의 양식에 이름 붙이는 태그입니다.
 주요 속성은 for입니다.
 label의 for의 값과 양식의 id의 값이 같으면 연결됩니다.
-label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체크를 하거나 체크를 해제합니다.
-<https://www.codingfactory.net/11008>
+label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체크를 하거나 체크를 해제합니다.</li>
 
+---
 
-Feelings: 머리 빠지는 이 느낌은 뭘까요.
+<h3>Feelings</h3> 머리 빠지는 이 느낌은 뭘까요.
 
-Findings: 필요 없는거에 많은 시간 투자 하다가 방황할때가 있다. 삽질...
+----
 
-Future Action Plan: 삽질 안하는 선 한에서 필요 한것부터 차근차근히 합시다.
+<h3>Findings</h3> 필요 없는거에 많은 시간 투자 하다가 방황할때가 있다. 삽질...
 
-Feedback: 오늘도 피곤하고 헝그리한 상태.
+---
 
+<h3>Future Action Plan</h3> 삽질 안하는 선 한에서 필요 한것부터 차근차근히 합시다.
+
+---
+
+<h3>Feedback</h3> 오늘도 피곤하고 헝그리한 상태.
+
+----
