--- a/_posts/TIL/2019-11-28-TIL.md
+++ b/_posts/TIL/2019-11-28-TIL.md
@@ -4,12 +4,15 @@ title: "19-11-28"
 category: TIL
 ---
 
-오늘은 todo list 에서 나오는 메소드 밑 함수들을 새로운 js 파일로 불러와 어떤 기능들을 하는지 배우고 익숙해 지기 위해서 실험을 했습니다.
-
-Facts:
+&nbsp;&nbsp; 오늘은 todo list 에서 나오는 메소드 밑 함수들을 새로운 js 파일로 불러와 어떤 기능들을 하는지 배우고 익숙해 지기 위해서 실험을 했습니다.
 
 
-<strong>화살표 함수</strong>
+-----
+
+<h3>Facts</h3>
+
+
+[화살표 함수](https://joshua1988.github.io/web-development/translation/essential-es6-features-for-vuejs/)
 
 자바스크립트에서 함수를 생성하기 위해서는 주로 function 키워드를 사용합니다.
 function 키워드는 2가지 방법으로 함수를 생성할 수 있는데요, 
@@ -41,34 +44,36 @@ filteredArray = myArray.filter(function(element){
 <li>화살표 함수</li>
 filteredArray = myArray.filter(element => element > 2);
 
-// 일반적인 자바스크립트 함수(ES5)
+<li> 일반적인 자바스크립트 함수(ES5)</li>
 
 function (인자) {
 	함수 로직
 }
 
-// 화살표 함수(ES6)
+<li> 화살표 함수(ES6)</li>
 
 
 (인자) => {
 	함수 로직
 }
-<https://joshua1988.github.io/web-development/translation/essential-es6-features-for-vuejs/>
-
-<strong> input 태그</strong>
-
-input : 평범하게 글자나 텍스트칸을 넣을 수있는 공간이 생기죠.
-
-input type=""   : 기존의 input에다가 type를 지정하여 type의 옵션을 넣으면,
-다양한 모양이 됩니다. 단 입력이나 기타 등등의 모양 꼴로 변하죠.
-
-input type="checkbox" : 이건 체크박스로 나타납니다.
-<https://delirussum.tistory.com/35>
 
 
-커스텀 데이터 data-x
-Simply, the specification for custom data attributes states that any attribute that starts with “data-” will be treated as a storage area for private data (private in the sense that the end user can’t see it – it doesn’t affect layout or presentation). This allows you to write valid HTML markup (passing an HTML 5 validator) while, simultaneously, embedding data within your page. 
-<https://stackoverflow.com/questions/23433415/html-with-attributes-starting-with-data?noredirect=1&lq=1>
+[input 태그](https://delirussum.tistory.com/35)
+
+<li>input : 평범하게 글자나 텍스트칸을 넣을 수있는 공간이 생기죠.</li>
+
+<li>input type=""   : 기존의 input에다가 type를 지정하여 type의 옵션을 넣으면,
+다양한 모양이 됩니다. 단 입력이나 기타 등등의 모양 꼴로 변하죠.</li>
+
+<li>input type="checkbox" : 이건 체크박스로 나타납니다.</li>
+
+
+
+[커스텀 데이터 data-x](https://stackoverflow.com/questions/23433415/html-with-attributes-starting-with-data?noredirect=1&lq=1)
+<li>Simply, the specification for custom data attributes states that any attribute that starts with “data-” will be treated as a storage area for private data (private in the sense that the end user can’t see it – it doesn’t affect layout or presentation). This allows you to write valid HTML markup (passing an HTML 5 validator) while, simultaneously, embedding data within your page. </li>
+
+
+[dom.value]
 
 
 dom.value 불러 오는 형식이 
@@ -79,15 +84,24 @@ dom.value 불러 오는 형식이
 이런 식으로 해야한다. 
 targetname 과 ClassName 은 고유 데이터가 아니고 shared 이므로 array 이고 그러므로 [] 를 써야지 제대로 작성이 된다.
 
+[findIndex()](https://bblog.tistory.com/300)
+<li>findIndex() 메서드는 주어진 판별 함수를 만족하는 배열의 첫 번째 요소에 대한 인덱스를 반환합니다. 만족하는 요소가 없으면 -1을 반환합니다.</li>
 
-findIndex() 메서드는 주어진 판별 함수를 만족하는 배열의 첫 번째 요소에 대한 인덱스를 반환합니다. 만족하는 요소가 없으면 -1을 반환합니다.
-<https://bblog.tistory.com/300>
+
+---
 
 Feelings: 많이 배워 갑니다.
 
+---
+
 Findings: 그냥 보는것 보단 치는게 낫네요
+
+---
 
 Future Action Plan: 좀더 많이 치고 봅시다. 주말에 TIL 고치겠습니다.
 
+---
+
 Feedback: 우와 목요일이다.
 
+----
