2019-12-01-Week1-Post-fix1

--- a/_posts/post/2019-12-01-Week1.md
+++ b/_posts/post/2019-12-01-Week1.md
@@ -4,7 +4,7 @@ title: "19-12-01 Week 1"
 category: posts
 ---
 
-첫째주\
+첫째주<br/>
 이번주에는 블로그를 조금 만지고 그 후에 js 와 html 로 todolist 를 만들면서 그 과정에 js 와 html 에 익숙해지는 과정을 가졌습니다.
 
 1. let, const
@@ -20,18 +20,18 @@ category: posts
 
 ---
 
-1] [let](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Statements/let)\
-구문은 블록 유효 범위를 갖는 지역 변수를 선언하며, 선언과 동시에 임의의 값으로 초기화할 수도 있다. \
-블록은 {} 이다\
-\
-변수 선언문이라고 함\
-예시) let variable = anything;\
-여기서 variable = 변수\
-let = 선언문\
-anything = 값\
+1] [let](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Statements/let)<br/>
+구문은 블록 유효 범위를 갖는 지역 변수를 선언하며, 선언과 동시에 임의의 값으로 초기화할 수도 있다. <br/>
+블록은 {} 이다<br/>
+<br/>
+변수 선언문이라고 함<br/>
+예시) let variable = anything;<br/>
+여기서 variable = 변수<br/>
+let = 선언문<br/>
+anything = 값<br/>
 변수 variable 에 anything 이라는 값을 let 으로 선언함.
 
-[const](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Statements/const)\
+[const](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Statements/const)<br/>
 let 이랑 비슷한 변수 선언문이지만 '초기화' 가 안된다. 여기서 초기화라는 뜻은 한번 그 값에 할당값을 주면 바꾸지 못한다. 그것을 이 업계에서 '초기화' 가 안된다고 한다.
 
 결론적으로 let 은 scope 안에서 쓰기 위한 변수 선언문. const 는 let 이랑 비슷하지만 한번 초기화 하면 그 후로 값을 못 바꾼다. 당연 외부에서 바꿀려는 것을 막기 위해서이다.
@@ -40,38 +40,38 @@ let 이랑 비슷한 변수 선언문이지만 '초기화' 가 안된다. 여기
 
 ---
 
-2] [scope](https://developer.mozilla.org/en-US/docs/Glossary/Scope)\
-scope = 범위\
-scope 단어를 보통 "in the current scope" 라고 쓴다. 그 뜻은 범위 안에 있냐 라는 뜻이다.\
-값이나 표현식이 in the current scope 이면 쓸수 있다는 말이다.\
+2] [scope](https://developer.mozilla.org/en-US/docs/Glossary/Scope)<br/>
+scope = 범위<br/>
+scope 단어를 보통 "in the current scope" 라고 쓴다. 그 뜻은 범위 안에 있냐 라는 뜻이다.<br/>
+값이나 표현식이 in the current scope 이면 쓸수 있다는 말이다.<br/>
 예시)
-{...let x=1231;...}\
-console.log(x);\
+{...let x=1231;...}<br/>
+console.log(x);<br/>
 여기서 보면 블록 안에 let 선언문으로 x 변수를 1231 로 선언을 했는데 블록 밖에서 log 에 출력하라고 했다. 위에서 말했듯이 let은 블록 안에서 선언 됬다면 밖에서 불러 올수 없다. 그러니 x is not in the current scope 라고 할수 있다. x 를 불러 올려고 했다면 제일 간단한 방법은 블록 밖에서 x 선언을 했던가 log 를 안쪽으로 넣었으면 됬다.
 
 scope 는 accessability 를 구분하기 위한 것이다.
 
 ---
 
-3] [함수 선언식 function declaration / 함수 표현식 function expression](https://medium.com/@mandeep1012/function-declarations-vs-function-expressions-b43646042052)\
+3] [함수 선언식 function declaration / 함수 표현식 function expression](https://medium.com/@mandeep1012/function-declarations-vs-function-expressions-b43646042052)<br/>
 함수 선언식function declaration is “saved for later use”, and will be executed later, when it is invoked (called). 선언만 되었고 불러서 써야한다.
 
 함수 표현식function expression. After a function expression has been stored in a variable, the variable can be used as a function. Functions stored in variables do not need function names. They are always invoked (called) using the variable name. 함수 표현식으로 변수 안에 함수를 넣어서 나중에 불러서 쓸수 있다. 
 
-*차이점\
+*차이점<br/>
 Example: Function Expression
 
 alert(foo());  
-var foo = function() { return 5; }\
+var foo = function() { return 5; }<br/>
 출력은 "ERROR!  foo wasn't loaded yet"
 
 Example: Function Declaration
 
-alert(foo());\
-function foo() { return 5; }\
+alert(foo());<br/>
+function foo() { return 5; }<br/>
 출력은 "5"
 
-Function declarations load before any code is executed while Function expressions load only when the interpreter reaches that line of code.\
+Function declarations load before any code is executed while Function expressions load only when the interpreter reaches that line of code.<br/>
 함수 선언식은 코드들을 출력 하기 전에 다 로드가 된 후에 코드들을 실행한다. 반면에 함수 표현식은 그 선언 하는 코드 줄 까지 가야지만 선언 되므로 그전에 불러올시에 바로 에러 뜬다.
 
 ---
@@ -89,12 +89,12 @@ function sayHi(){
 <li>함수 표현(Function Expression)</li>
 무명(anonymous:이름이 없음) 함수를 생성한 후 변수에 담는 방식입니다.
 
-예시)\
-일반 함수 표현식\
-let sayHi2 = function(){\
-console.log("hi!");\
-}\
-화살 표함수 표현식\
+예시)<br/>
+일반 함수 표현식<br/>
+let sayHi2 = function(){<br/>
+console.log("hi!");<br/>
+}<br/>
+화살 표함수 표현식<br/>
 var sayHi2 = () => console.log("hi!");
 
 
@@ -111,104 +111,105 @@ filteredArray = myArray.filter(function(element){
 });
 
 <li>화살표 함수</li>
-filteredArray = myArray.filter(element => element > 2);\
+filteredArray = myArray.filter(element => element > 2);
 
-일반적인 함수\
-function (인자) {\
-	함수 로직\
+일반적인 함수<br/>
+function (인자) {<br/>
+	함수 로직<br/>
 }
 
-화살표 함수\
-(인자) => {\
-	함수 로직\
+화살표 함수<br/>
+(인자) => {<br/>
+	함수 로직<br/>
 }
 
 결과적으로 이것은 가독성을 위한 일반 함수 선언식 대체용이다.
 
 ---
 
-5] [객체 리터럴(object literal)](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Object_initializer)\
-객체object 에 literal 방식으로 선언할때...\
-가독성용 객체 선언 방식이다.\
+5] [객체 리터럴(object literal)](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Object_initializer)<br/>
+객체object 에 literal 방식으로 선언할때...<br/>
+가독성용 객체 선언 방식이다.<br/>
 
-[예시](https://webclub.tistory.com/390))\
-일반 선언 방식\
-var obj = {}; \
-obj.name = 'jaehee'; \
-obj.age = 10;\
-obj.increaseAge = function (i) { \
-this.age + i; \
+[예시](https://webclub.tistory.com/390))<br/>
+일반 선언 방식<br/>
+var obj = {}; <br/>
+obj.name = 'jaehee'; <br/>
+obj.age = 10;<br/>
+obj.increaseAge = function (i) { <br/>
+this.age + i; <br/>
 };
 
-객체 리터럴 방식\
-var obj = { \
-name : 'jaehee', \
-age : 10, \
-increaseAge : function (i) { \
-this.age + i; \
-} \
+객체 리터럴 방식<br/>
+var obj = { <br/>
+name : 'jaehee', <br/>
+age : 10, <br/>
+increaseAge : function (i) { <br/>
+this.age + i; <br/>
+} <br/>
 };
 
 결국엔 가독성 때문에 사용 하는 일반 방식 대체용이다.
 
 ---
 
-6] [구조 분해 할당destructuring](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment)\
-객체나 배열을 분해하기 위해서 쓰는것.\
-말 그대로 객체난 배열을 나눠야 할때 쓰는게 구조 분해 할당이다.\
+6] [구조 분해 할당destructuring](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment)
 
-예시)\
-var o = {p: 42, q: true};\
+객체나 배열을 분해하기 위해서 쓰는것.<br/>
+말 그대로 객체난 배열을 나눠야 할때 쓰는게 구조 분해 할당이다.<br/>
+
+예시)<br/>
+var o = {p: 42, q: true};<br/>
 var {p: foo, q: bar} = o;
 
-console.log(foo); // 42\
+console.log(foo); // 42<br/>
 console.log(bar); // true
 
 ---
 
-7] [forEach, map, filter](https://velog.io/@decody/map-%EC%A0%95%EB%A6%AC)\
-forEach 는 for 대신 쓰는것이다. for 선언할때 let i= 0; i'<'length; i++;
+7] [forEach, map, filter](https://velog.io/@decody/map-%EC%A0%95%EB%A6%AC)<br/>
+forEach 는 for 대신 쓰는것이다. for 선언할때 (let i= 0; i<length; i++;)
 쓰는것을 많이 봤을것이다. forEach 는 그것 없이 그냥 다 돌리는것이다
 
-좀 더 명확하게는\
-예시)\
-일반적으로 for 은 이렇게 쓴다\
-for (var i = 0; i < arr.length; i++) {\
-    if (arr[i] % 2 === 0) { \
-        new_arr.push(arr[i])\
-}\
-forEach 는 이러하다.\
-arr.forEach(function (n) {\
-    if (n % 2 ===0) {\
-        new_arr.push(n)\
-    }\
+좀 더 명확하게는<br/>
+예시)<br/>
+일반적으로 for 은 이렇게 쓴다<br/>
+for (var i = 0; i < arr.length; i++) {<br/>
+    if (arr[i] % 2 === 0) { <br/>
+        new_arr.push(arr[i])<br/>
+}<br/>
+forEach 는 이러하다.<br/>
+arr.forEach(function (n) {<br/>
+    if (n % 2 ===0) {<br/>
+        new_arr.push(n)<br/>
+    }<br/>
 
 그냥 가독성용 밑 편의성용이다.
 
-map()\
-이 메소드는 배열이 있다면 일괄적으로 바꿔주는 메소드이다\
-예시)\
-var arr = ['foo', 'hello', 'diamond', 'A']\
-var arr2 = arr.map((v) => v.length)\
+map()<br/>
+이 메소드는 배열이 있다면 일괄적으로 바꿔주는 메소드이다<br/>
+예시)<br/>
+var arr = ['foo', 'hello', 'diamond', 'A']<br/>
+var arr2 = arr.map((v) => v.length)<br/>
 console.log(arr2)   
 출력값은 [3, 5, 7, 1] 이다.
 뭔가를 일괄적으로 바꿔야할때 이 메소드를 쓰자.
 
 filter()\
-요소를 걸러내어 배열로 true/false 반환, 없으면 빈 배열.\
-용어 그대로 원하는거 조건에 맞게 필터 해서 보내준다.\
-예시)\
-var arr = [4, 15, 377, 395, 400, 1024, 3000]\
-var arr2 = arr.filter((v) => (v % 5 === 0))\
-console.log(arr2)\
+요소를 걸러내어 배열로 true/false 반환, 없으면 빈 배열.<br/>
+용어 그대로 원하는거 조건에 맞게 필터 해서 보내준다.<br/>
+예시)<br/>
+var arr = [4, 15, 377, 395, 400, 1024, 3000]<br/>
+var arr2 = arr.filter((v) => (v % 5 === 0))<br/>
+console.log(arr2)<br/>
 출력값은 [15, 395, 400, 3000] 이다.
 배열에 찾는게 있다면 이 메소드를 쓰면 좋겠다.
 
 ---
 
-8] [DOM 문서 객체 모델](https://poiemaweb.com/js-dom)\
-돔,문서 객체 모델, Dom, Document Oriented Model\
-텍스트 파일로 만들어져 있는 웹 문서를 브라우저에 렌더링하려면 웹 문서를 브라우저가 이해할 수 있는 구조로 메모리에 올려야 한다. 브라우저의 렌더링 엔진은 웹 문서를 로드한 후, 파싱하여 웹 문서를 브라우저가 이해할 수 있는 구조로 구성하여 메모리에 적재하는데 이를 DOM이라 한다. 즉 모든 요소와 요소의 어트리뷰트, 텍스트를 각각의 객체로 만들고 이들 객체를 부자 관계를 표현할 수 있는 트리 구조로 구성한 것이 DOM이다. 이 DOM은 자바스크립트를 통해 동적으로 변경할 수 있으며 변경된 DOM은 렌더링에 반영된다.\
+8] [DOM 문서 객체 모델](https://poiemaweb.com/js-dom)<br/>
+돔,문서 객체 모델, Dom, Document Oriented Model<br/>
+텍스트 파일로 만들어져 있는 웹 문서를 브라우저에 렌더링하려면 웹 문서를 브라우저가 이해할 수 있는 구조로 메모리에 올려야 한다. 브라우저의 렌더링 엔진은 웹 문서를 로드한 후, 파싱하여 웹 문서를 브라우저가 이해할 수 있는 구조로 구성하여 메모리에 적재하는데 이를 DOM이라 한다. 즉 모든 요소와 요소의 어트리뷰트, 텍스트를 각각의 객체로 만들고 이들 객체를 부자 관계를 표현할 수 있는 트리 구조로 구성한 것이 DOM이다. 이 DOM은 자바스크립트를 통해 동적으로 변경할 수 있으며 변경된 DOM은 렌더링에 반영된다.<br/>
 쉽게 말하자면 이러저러한 것들을 다 연결시켜 통합해서 브라우저에 띄울수 있게 하는게 제일 큰 역할이다. 예를들어서 html 태그를 써서 js 로 동적으로 만들어서 css 로 꾸미고 브라우저에 띄우는 과정 등. 이러함으로써 다른 언어들을 연결하고 필요한 기능을 유기적으로 쓸수 있게 한다.
 
 
