--- a/_posts/post/2019-12-01-Week1.md
+++ b/_posts/post/2019-12-01-Week1.md
@@ -20,7 +20,7 @@ category: posts
 
 ---
 
-1] [let](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Statements/let)<br/>
+1.[let](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Statements/let)<br/>
 구문은 블록 유효 범위를 갖는 지역 변수를 선언하며, 선언과 동시에 임의의 값으로 초기화할 수도 있다. <br/>
 블록은 {} 이다<br/>
 <br/>
@@ -40,7 +40,7 @@ let 이랑 비슷한 변수 선언문이지만 '초기화' 가 안된다. 여기
 
 ---
 
-2] [scope](https://developer.mozilla.org/en-US/docs/Glossary/Scope)<br/>
+2.[scope](https://developer.mozilla.org/en-US/docs/Glossary/Scope)<br/>
 scope = 범위<br/>
 scope 단어를 보통 "in the current scope" 라고 쓴다. 그 뜻은 범위 안에 있냐 라는 뜻이다.<br/>
 값이나 표현식이 in the current scope 이면 쓸수 있다는 말이다.<br/>
@@ -53,7 +53,7 @@ scope 는 accessability 를 구분하기 위한 것이다.
 
 ---
 
-3] [함수 선언식 function declaration / 함수 표현식 function expression](https://medium.com/@mandeep1012/function-declarations-vs-function-expressions-b43646042052)<br/>
+3.[함수 선언식 function declaration / 함수 표현식 function expression](https://medium.com/@mandeep1012/function-declarations-vs-function-expressions-b43646042052)<br/>
 함수 선언식function declaration is “saved for later use”, and will be executed later, when it is invoked (called). 선언만 되었고 불러서 써야한다.
 
 함수 표현식function expression. After a function expression has been stored in a variable, the variable can be used as a function. Functions stored in variables do not need function names. They are always invoked (called) using the variable name. 함수 표현식으로 변수 안에 함수를 넣어서 나중에 불러서 쓸수 있다. 
@@ -76,7 +76,7 @@ Function declarations load before any code is executed while Function expression
 
 ---
 
-4] [화살표 함수arrow function vs 함수function](https://joshua1988.github.io/web-development/translation/essential-es6-features-for-vuejs/)
+4.[화살표 함수arrow function vs 함수function](https://joshua1988.github.io/web-development/translation/essential-es6-features-for-vuejs/)
 
 자바스크립트에서 함수를 생성하기 위해서는 주로 function 키워드를 사용합니다.
 function 키워드는 2가지 방법으로 함수를 생성할 수 있는데요, 
@@ -127,7 +127,7 @@ function (인자) {<br/>
 
 ---
 
-5] [객체 리터럴(object literal)](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Object_initializer)<br/>
+5.[객체 리터럴(object literal)](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Object_initializer)<br/>
 객체object 에 literal 방식으로 선언할때...<br/>
 가독성용 객체 선언 방식이다.<br/>
 
@@ -153,7 +153,7 @@ this.age + i; <br/>
 
 ---
 
-6] [구조 분해 할당destructuring](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment)
+6.[구조 분해 할당destructuring](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment)
 
 객체나 배열을 분해하기 위해서 쓰는것.<br/>
 말 그대로 객체난 배열을 나눠야 할때 쓰는게 구조 분해 할당이다.<br/>
@@ -167,7 +167,7 @@ console.log(bar); // true
 
 ---
 
-7] [forEach, map, filter](https://velog.io/@decody/map-%EC%A0%95%EB%A6%AC)<br/>
+7.[forEach, map, filter](https://velog.io/@decody/map-%EC%A0%95%EB%A6%AC)<br/>
 forEach 는 for 대신 쓰는것이다. for 선언할때 (let i= 0; i<length; i++;)
 쓰는것을 많이 봤을것이다. forEach 는 그것 없이 그냥 다 돌리는것이다
 
@@ -207,7 +207,7 @@ console.log(arr2)<br/>
 
 ---
 
-8] [DOM 문서 객체 모델](https://poiemaweb.com/js-dom)<br/>
+8.[DOM 문서 객체 모델](https://poiemaweb.com/js-dom)<br/>
 돔,문서 객체 모델, Dom, Document Oriented Model<br/>
 텍스트 파일로 만들어져 있는 웹 문서를 브라우저에 렌더링하려면 웹 문서를 브라우저가 이해할 수 있는 구조로 메모리에 올려야 한다. 브라우저의 렌더링 엔진은 웹 문서를 로드한 후, 파싱하여 웹 문서를 브라우저가 이해할 수 있는 구조로 구성하여 메모리에 적재하는데 이를 DOM이라 한다. 즉 모든 요소와 요소의 어트리뷰트, 텍스트를 각각의 객체로 만들고 이들 객체를 부자 관계를 표현할 수 있는 트리 구조로 구성한 것이 DOM이다. 이 DOM은 자바스크립트를 통해 동적으로 변경할 수 있으며 변경된 DOM은 렌더링에 반영된다.<br/>
 쉽게 말하자면 이러저러한 것들을 다 연결시켜 통합해서 브라우저에 띄울수 있게 하는게 제일 큰 역할이다. 예를들어서 html 태그를 써서 js 로 동적으로 만들어서 css 로 꾸미고 브라우저에 띄우는 과정 등. 이러함으로써 다른 언어들을 연결하고 필요한 기능을 유기적으로 쓸수 있게 한다.
@@ -215,8 +215,8 @@ console.log(arr2)<br/>
 
 
 ---
-9] [TodoList 예제 코드](https://freshman.tech/todo-list/)
-
+9.[TodoList 예제 코드](https://freshman.tech/todo-list/)
+"
 let todoItems = [];
 
 function addTodo(text) {
@@ -285,24 +285,24 @@ list.addEventListener('click', event => {
   }
 
 });
-
+"
 -----------
 
-10] 그 외의 것들
+10.그 외의 것들
 
-[Template literals](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals) 
+<p> [Template literals](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals)  </p>
 <li>내장된 표현식을 허용하는 문자열 리터럴입니다
 여러 줄로 이뤄진 문자열과 문자 보간기능을 사용할 수 있습니다.
 변하는 문자를 쓸려면 template literal 을 써야한다.</li>
 <li>`` 안에 특정한 함수의 값들을 가져올려면 ${}써서 string 으로 불러오는것을 방지할수 있다.</li>
 
-[label](https://www.codingfactory.net/11008)
+<p>[label](https://www.codingfactory.net/11008)</p>
 <li>label은 폼의 양식에 이름 붙이는 태그입니다.
 주요 속성은 for입니다.
 label의 for의 값과 양식의 id의 값이 같으면 연결됩니다.
 label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체크를 하거나 체크를 해제합니다.</li>
 
-[form](https://developer.mozilla.org/ko/docs/Web/HTML/Element/form) [태그](http://www.nextree.co.kr/p8428/)
+<p>[form](https://developer.mozilla.org/ko/docs/Web/HTML/Element/form) [태그](http://www.nextree.co.kr/p8428/)</p>
 
 <li>form 요소에 들어간 속성을 보면, action과 method가 있습니다. 이 중에 action 속성은 이 폼을 전송할 URL을 지정합니다.</li>
 <li>태그 안에 input 를 넣어서 쉽게 입력 창을 띄울 수 있다는것을 알았습니다. </li>
@@ -310,18 +310,18 @@ label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체
 <li>type button 하면 버튼</li>
 
 
-[label 요소](http://webberstudy.com/html-css/html-3/form-1/)
+<p>[label 요소](http://webberstudy.com/html-css/html-3/form-1/)</p>
 <li>이 label 요소는 해당 폼 요소에 어떤 값을 넣어야 하는지 라벨을 붙여주는 요소입니다</li>
 
-[symbol()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Symbol)
+<p>[symbol()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Symbol)</p>
 <li>symbol 의 id는 아이콘 생김새,view box는 크기, path는 위치</li>
 
-[Number()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Number)
+<p>[Number()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Number)</p>
 <li>함수는 문자를 숫자로 바꿔줌</li>
 
-[===](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Comparison_Operators) <li>피연산자들이 같은 타입일 때 동등 비교를 하도록 되어있다</li>
+<p>[===](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Comparison_Operators)</p> <li>피연산자들이 같은 타입일 때 동등 비교를 하도록 되어있다</li>
 
-[input 태그](https://delirussum.tistory.com/35)
+<p>[input 태그](https://delirussum.tistory.com/35)</p>
 
 <li>input : 평범하게 글자나 텍스트칸을 넣을 수있는 공간이 생기죠.</li>
 
@@ -330,13 +330,13 @@ label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체
 
 <li>input type="checkbox" : 이건 체크박스로 나타납니다.</li>
 
-[findIndex()](https://bblog.tistory.com/300)
+<p>[findIndex()](https://bblog.tistory.com/300)</p>
 <li>findIndex() 메서드는 주어진 판별 함수를 만족하는 배열의 첫 번째 요소에 대한 인덱스를 반환합니다. 만족하는 요소가 없으면 -1을 반환합니다.</li>
 
-[addEventListener](https://developer.mozilla.org/ko/docs/Web/API/EventTarget/addEventListener)
+<p>[addEventListener](https://developer.mozilla.org/ko/docs/Web/API/EventTarget/addEventListener)</p>
 <li>addEventListener 를 쓰면 굳이 onclick 같은 html 에 함수를 부르지 않아도 되는걸 배웠습니다.</li>
 
-[insertAdjacentHTML](https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML)
+<p>[insertAdjacentHTML](https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML)</p>
 <li>insertAdjacentHTML() 로 웹에 간단하게 출력할수 있습니다.
 </li>
 
