--- a/_posts/post/2019-12-01-Week1.md
+++ b/_posts/post/2019-12-01-Week1.md
@@ -216,7 +216,7 @@ console.log(arr2)<br/>
 
 ---
 9.[TodoList 예제 코드](https://freshman.tech/todo-list/)
-"
+
 let todoItems = [];
 
 function addTodo(text) {
@@ -230,11 +230,11 @@ function addTodo(text) {
 
   const list = document.querySelector('.js-todo-list');
   list.insertAdjacentHTML('beforeend', `
-    <li class="todo-item" data-key="${todo.id}">
-      <input id="${todo.id}" type="checkbox"/>
-      <label for="${todo.id}" class="tick js-tick"></label>
-      <span>${todo.text}</span>
-      <button class="delete-todo js-delete-todo">
+    "<li class="todo-item" data-key="${todo.id}"><br/>
+      <input id="${todo.id}" type="checkbox"/><br/>
+      <label for="${todo.id}" class="tick js-tick"></label><br/>
+      <span>${todo.text}</span><br/>
+      <button class="delete-todo js-delete-todo"><br/>
         <svg><use href="#delete-icon"></use></svg>
       </button>
     </li>
@@ -290,56 +290,67 @@ list.addEventListener('click', event => {
 
 10.그 외의 것들
 
-<p> [Template literals](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals)  </p>
+[Template literals](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Template_literals)<br/>
 <li>내장된 표현식을 허용하는 문자열 리터럴입니다
 여러 줄로 이뤄진 문자열과 문자 보간기능을 사용할 수 있습니다.
 변하는 문자를 쓸려면 template literal 을 써야한다.</li>
 <li>`` 안에 특정한 함수의 값들을 가져올려면 ${}써서 string 으로 불러오는것을 방지할수 있다.</li>
+ <br/>
 
-<p>[label](https://www.codingfactory.net/11008)</p>
+[label](https://www.codingfactory.net/11008)<br/>
 <li>label은 폼의 양식에 이름 붙이는 태그입니다.
 주요 속성은 for입니다.
 label의 for의 값과 양식의 id의 값이 같으면 연결됩니다.
 label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체크를 하거나 체크를 해제합니다.</li>
+<br/>
 
-<p>[form](https://developer.mozilla.org/ko/docs/Web/HTML/Element/form) [태그](http://www.nextree.co.kr/p8428/)</p>
-
+[form](https://developer.mozilla.org/ko/docs/Web/HTML/Element/form) [태그](http://www.nextree.co.kr/p8428/)<br/>
 <li>form 요소에 들어간 속성을 보면, action과 method가 있습니다. 이 중에 action 속성은 이 폼을 전송할 URL을 지정합니다.</li>
 <li>태그 안에 input 를 넣어서 쉽게 입력 창을 띄울 수 있다는것을 알았습니다. </li>
 <li>type text 하면 텍스트 입력창</li>
 <li>type button 하면 버튼</li>
+<br/>
 
-
-<p>[label 요소](http://webberstudy.com/html-css/html-3/form-1/)</p>
+[label 요소](http://webberstudy.com/html-css/html-3/form-1/)<br/>
 <li>이 label 요소는 해당 폼 요소에 어떤 값을 넣어야 하는지 라벨을 붙여주는 요소입니다</li>
+<br/>
 
-<p>[symbol()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Symbol)</p>
+[symbol()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Symbol)<br/>
 <li>symbol 의 id는 아이콘 생김새,view box는 크기, path는 위치</li>
+<br/>
 
-<p>[Number()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Number)</p>
+
+[Number()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Number)<br/>
 <li>함수는 문자를 숫자로 바꿔줌</li>
+<br/>
 
-<p>[===](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Comparison_Operators)</p> <li>피연산자들이 같은 타입일 때 동등 비교를 하도록 되어있다</li>
 
-<p>[input 태그](https://delirussum.tistory.com/35)</p>
+[===](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Comparison_Operators)<br/> <li>피연산자들이 같은 타입일 때 동등 비교를 하도록 되어있다</li>
+<br/>
 
+
+[input 태그](https://delirussum.tistory.com/35)<br/>
 <li>input : 평범하게 글자나 텍스트칸을 넣을 수있는 공간이 생기죠.</li>
 
 <li>input type=""   : 기존의 input에다가 type를 지정하여 type의 옵션을 넣으면,
 다양한 모양이 됩니다. 단 입력이나 기타 등등의 모양 꼴로 변하죠.</li>
 
 <li>input type="checkbox" : 이건 체크박스로 나타납니다.</li>
+<br/>
 
-<p>[findIndex()](https://bblog.tistory.com/300)</p>
+[findIndex()](https://bblog.tistory.com/300)<br/>
 <li>findIndex() 메서드는 주어진 판별 함수를 만족하는 배열의 첫 번째 요소에 대한 인덱스를 반환합니다. 만족하는 요소가 없으면 -1을 반환합니다.</li>
+<br/>
 
-<p>[addEventListener](https://developer.mozilla.org/ko/docs/Web/API/EventTarget/addEventListener)</p>
+[addEventListener](https://developer.mozilla.org/ko/docs/Web/API/EventTarget/addEventListener)<br/>
 <li>addEventListener 를 쓰면 굳이 onclick 같은 html 에 함수를 부르지 않아도 되는걸 배웠습니다.</li>
+<br/>
 
-<p>[insertAdjacentHTML](https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML)</p>
+[insertAdjacentHTML](https://developer.mozilla.org/ko/docs/Web/API/Element/insertAdjacentHTML)<br/>
 <li>insertAdjacentHTML() 로 웹에 간단하게 출력할수 있습니다.
 </li>
 
 
 ------
+
 
