2019-12-01-Week1-Post-fix4

--- a/_posts/post/2019-12-01-Week1.md
+++ b/_posts/post/2019-12-01-Week1.md
@@ -230,14 +230,14 @@ function addTodo(text) {
 
   const list = document.querySelector('.js-todo-list');
   list.insertAdjacentHTML('beforeend', `
-    "<li class="todo-item" data-key="${todo.id}"><br/>
-      <input id="${todo.id}" type="checkbox"/><br/>
-      <label for="${todo.id}" class="tick js-tick"></label><br/>
-      <span>${todo.text}</span><br/>
-      <button class="delete-todo js-delete-todo"><br/>
-        <svg><use href="#delete-icon"></use></svg>
-      </button>
-    </li>
+    "li class="todo-item" data-key="${todo.id}"
+      input id="${todo.id}" type="checkbox"/
+      label for="${todo.id}" class="tick js-tick"/label
+      span${todo.text}/span
+      button class="delete-todo js-delete-todo"
+        svguse href="#delete-icon"/use/svg
+      /button
+    /li
   `);
 }
 
@@ -286,6 +286,7 @@ list.addEventListener('click', event => {
 
 });
 "
+
 -----------
 
 10.그 외의 것들
