2019-12-01-Week1-Post-fix5

--- a/_posts/post/2019-12-01-Week1.md
+++ b/_posts/post/2019-12-01-Week1.md
@@ -195,7 +195,7 @@ console.log(arr2)
 출력값은 [3, 5, 7, 1] 이다.
 뭔가를 일괄적으로 바꿔야할때 이 메소드를 쓰자.
 
-filter()\
+filter()<br/>
 요소를 걸러내어 배열로 true/false 반환, 없으면 빈 배열.<br/>
 용어 그대로 원하는거 조건에 맞게 필터 해서 보내준다.<br/>
 예시)<br/>
@@ -326,7 +326,8 @@ label을 클릭하면, 연결된 양식에 입력할 수 있도록 하거나 체
 <br/>
 
 
-[===](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Comparison_Operators)<br/> <li>피연산자들이 같은 타입일 때 동등 비교를 하도록 되어있다</li>
+[===](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Comparison_Operators)<br/> 
+<li>피연산자들이 같은 타입일 때 동등 비교를 하도록 되어있다</li>
 <br/>
 
 
