--- a/_posts/TIL/2019-12-04-TIL.md
+++ b/_posts/TIL/2019-12-04-TIL.md
@@ -62,23 +62,30 @@ node 를 다 remove() 를 해버리면  null 이 되서 에러가 떠서 다시 
 ---
 
 <h3>Feelings</h3> 오늘도 알고리즘 문제를 풀면서 엄청 어렵다고 느꼈습니다. 갓윤석님 도움 덕분에 막힌 부분이 뻥뚫리면서 기분이 좋았습니다. 갓윤석님 만세.
-</br>코딩 도장때 코딩하는게 너무 어렵네요.
+
+
+코딩 도장때 코딩하는게 너무 어렵네요.
 
 ---
 
 <h3>Findings</h3>
-filter 를 쓸때 원본을 자체적으로 저장이 안되므로 저장을 해야한다.<br/>
+filter 를 쓸때 원본을 자체적으로 저장이 안되므로 저장을 해야한다.
+
+
 저장된 정보를 지울때 parent node 와 child 노드를 구분해서 지워야 한다. parentnode 를 다 지우면 다시 추가가 안된다.  
 
 ---
 
 <h3>Future Action Plan</h3> 
 console.log() 로 꼼꼼히 뭐가 어디서 어떻게 변화가 오는지 찍어 보면서 하자.
-</br>
+
+
 다음주 코딩 도장을 위해서 자주 쓰는 map(), filter() 를 바로 바로 쓸수 있을만큼 익숙해지자. 
 
 ---
 
 <h3>Feedback</h3> 
 다음주 수요일도 기대되네요.
+
+
 ----
