--- a/_posts/TIL/2019-12-05-TIL.md
+++ b/_posts/TIL/2019-12-05-TIL.md
@@ -51,7 +51,7 @@ let calledarray = JSON.parse(localStorage.getItem('savedarray')); // calledarray
 속성 접근자는 점 또는 괄호 표기법으로 객체의 속성에 접근할 수 있도록 해줍니다.
 
 ```javascript
-var person = {};
+let person = {};
 person['firstname'] = 'Mario';
 person['lastname'] = 'Rossi';
 
