--- a/_posts/TIL/2019-12-06-TIL.md
+++ b/_posts/TIL/2019-12-06-TIL.md
@@ -4,32 +4,33 @@ title: "19-12-06"
 category: TIL
 ---
 
-오늘은 주신 todolist 를 완벽하게 이해하고 백지 상태에서 부터 작성할 수 있을만큼의 익숙함을 가질려고 했는데 시간이 부족했습니다.
+오늘은 주신 todolist를 완벽하게 이해하고 백지상태에서부터 작성할 수 있을 만큼의 익숙함을 가지려고 했는데 시간이 부족했습니다.
 
 ---
 
 ### Facts
 
 
-html에서 작성할때 주의점
+html에서 작성할 때 주의점
 ```javascript
 <input type="text" id="input-todo-title" placeholder="입력하세요" />
 ```
-type="text" 할때 다 붙여 쓰기!
+type="text" 할 때 다 붙여 쓰기!
 
 <br/>
 
-화살표 함수 작성시
+화살표 함수 작성 시
+
 ```javascript
 const createList = text =>{
-}/// text 자리가 parameter 자리 인데 parameter 이 하나 이면 () 안써도 됩니다.
+}/// text 자리가 parameter 자리인데 parameter 이 하나 이면 () 안 써도 됩니다.
 const createList = (text, id) =>{
-}/// 두개 이상 쓸시 () 쓰도록 합시다.
+}/// 두 개 이상 쓸 시 () 쓰도록 합시다.
 ```
 
 <br/>
 
-코드 작성시 주의점
+코드 작성 시 주의점
 1. 비즈니스 로직과 화면 처리 하는 코드를 분리 합시다
 2. 함수 내에 역할과 책임을 잘 구분하고 역할과 책임을 각 하나씩만 부여하도록 하자. clean coding 합시다.
 3. if 를 왠만하면 쓰지 말도록 하자. 2개 이상 되면 너무 복잡해집니다
