--- a/_posts/TIL/2019-11-27-TIL.md
+++ b/_posts/TIL/2019-11-27-TIL.md
@@ -2,6 +2,7 @@
 layout: TIL
 title: "19-11-27"
 category: TIL
+description: ''
 ---
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 오늘도 어제와 같이 to do list 를 만들고 있었습니다. 
