--- a/_posts/TIL/2019-11-29-TIL.md
+++ b/_posts/TIL/2019-11-29-TIL.md
@@ -2,6 +2,7 @@
 layout: TIL
 title: "19-11-29"
 category: TIL
+description: ''
 ---
 
 오늘은 todolist 의 기본 mvp(minimum value product) 부터 설계를 하면서 만들었습니다. 다수 입력 할시 다수 출력 할수 있는 기능을 만들었습니다. 체크 박스와 삭제 아이콘은 만들었는데 기능은 아직 못했습니다.
