--- a/_posts/TIL/2019-12-04-TIL.md
+++ b/_posts/TIL/2019-12-04-TIL.md
@@ -2,6 +2,7 @@
 layout: TIL
 title: "19-12-04"
 category: TIL
+description: ''
 ---
 
 오늘은 todolist에 '선택 삭제' &nbsp;'전체 삭제' &nbsp;'선택 완료' &nbsp;'완료 삭제' &nbsp;'입력 시간'&nbsp; 등을 추가 했습니다.
