--- a/_posts/TIL/2019-12-06-TIL.md
+++ b/_posts/TIL/2019-12-06-TIL.md
@@ -2,6 +2,7 @@
 layout: TIL
 title: "19-12-06"
 category: TIL
+description: ''
 ---
 
 오늘은 주신 todolist를 완벽하게 이해하고 백지상태에서부터 작성할 수 있을 만큼의 익숙함을 가지려고 했는데 시간이 부족했습니다.
