--- a/_posts/TIL/2019-11-28-TIL.md
+++ b/_posts/TIL/2019-11-28-TIL.md
@@ -2,6 +2,7 @@
 layout: TIL
 title: "19-11-28"
 category: TIL
+description: ''
 ---
 
 &nbsp;&nbsp; 오늘은 todo list 에서 나오는 메소드 밑 함수들을 새로운 js 파일로 불러와 어떤 기능들을 하는지 배우고 익숙해 지기 위해서 실험을 했습니다.
