--- a/_posts/TIL/2019-12-09-TIL.md
+++ b/_posts/TIL/2019-12-09-TIL.md
@@ -24,22 +24,24 @@ description: ''
 
 로딩이 다 되면 보통 code-data-heap-stack 의 형태로 구분됩니다.
 
-복사
-| Memory               |
-| :------------------- |  
-| code                 |
-| data                 |
-| heap                 |
-| stack                |
+
+
+|Memory|
+|:-:|
+|code|
+|data|
+|heap|
+|stack|
 
 (code, data) 는 프로그램 명령어를 담고 있고 <br>
 (heap stack) 읽고 쓸수 있는 공간<br>
 
-| 메모리 계층 구조                 |   |  
-| :------------------- |  :-----------------:
-| cache  |속도 제일 빠르고 비싸다|
-| ram                 |속도 조금 빠르다  조금 비싸다           |
-| storage(hdd,ssd)                 |속도 느리고 싸다        |
+|메모리 계층 구조||
+|:-:||:-:|
+|cache|속도 제일 빠르고 비싸다|
+|ram|속도 조금 빠르고 조금 비싸다|
+|storage(hdd,sdd)|속도 느리고 싸다|
+
 파일들의 크기, 자주 쓰는 정도, 등 에 따라 메모리 계층 구조에 위치한다. 엄청 자주 쓰고 크기도 작으면 cache 계속 쓰고 있지만 어느정도 크기이면 ram. 자주 안쓰고 크기가 크면 storage.
 
 데이터의 지역성
