--- a/_posts/TIL/2019-12-09-TIL.md
+++ b/_posts/TIL/2019-12-09-TIL.md
@@ -69,7 +69,7 @@ Reference:<br>
 
 ### Findings
 
-camelCase Pascalcase
+camelCase Pascalcase 잘 상기하면서 코딩 하면 오타가 덜 나네요.
 집중을 하지 않으면 오타가 많이 나서 잘못하면 코드가 실행이 안됩니다.
 
 ----
