--- a/_posts/TIL/2019-12-10-TIL.md
+++ b/_posts/TIL/2019-12-10-TIL.md
@@ -29,7 +29,7 @@ By using pagination user can move between pages of content. The pagination patte
 
 ### Future Action Plan
 
-오타를 내지 않기 위해서 집중하면서 쓰도록 합시다.
+조금 더 짝 프로그래밍을 할때 정보 전달을 더 잘 하기 위한 방법을 강구하겠습니다.
 
 ----
 
