--- a/_posts/TIL/2019-12-13-TIL.md
+++ b/_posts/TIL/2019-12-13-TIL.md
@@ -8,7 +8,7 @@ description: ''
 
 ### Facts
 
-오늘은 terraform에 대하여 배웠습니다. terraform 이란 인프라를 만든 후 변경 밑 수정을 관리하는 도구입니다. 비슷한 예를 들자면  google drive 나 dropbox 지만 많은 사람들과 연결하고 수정 등을 할 수 있습니다
+오늘은 terraform에 대하여 배웠습니다. terraform 이란 인프라를 만든 후 변경 및 수정을 관리하는 도구입니다. 또한 이미 구축 했던 코드 이던 프로그램을 내려 받아서 어디든 적용 할 수 있습니다. 그것을 저장 하고 도와주는 공간은 아마존 s3, 구글 드라이브, 드랍박스 등이 있습니다.
 
 코딩 테스트 연습문제를 3개 풀었습니다.
 1.  [핸드폰 번호 가리기](https://programmers.co.kr/learn/courses/30/lessons/12948)
