--- a/_posts/TIL/2019-12-17-TIL.md
+++ b/_posts/TIL/2019-12-17-TIL.md
@@ -23,7 +23,7 @@ description: ''
 
 [dependency graph](https://webpack.js.org/concepts/dependency-graph/)
 
-한 파일이 다른 파일이 필요할 때 이것을 의존성이라고 웹팩이 지정합니다. 그것들을 맵팩을 초기에 실행 시에 만드는 config 파일에 필요한 것들을 나열 하는게 dependency graph.
+한 파일이 다른 파일이 필요할 때 이것을 의존성이라고 웹팩이 지정합니다. 그것들을 웹팩을 초기에 실행 시에 만드는 config 파일에 필요한 것들을 나열 하는게 dependency graph.
 
 ---
 
@@ -47,6 +47,6 @@ description: ''
 
 ### Feedback
 
-맵팩맾백
+웹팩윂백
 
 ---
