--- a/_posts/TIL/2019-12-20-TIL.md
+++ b/_posts/TIL/2019-12-20-TIL.md
@@ -6,19 +6,17 @@ description: ''
 ---
 
 
-synch는 결괏값이 올 때까지 기다린다.
+sync는 결괏값이 올 때까지 기다린다.
 
-asych는 결괏값이 안 와도 다른 작업을 실행할 수 있다.
+asyc는 결괏값이 안 와도 다른 작업을 실행할 수 있다.
 
-asynch 예를 들자면 카드 결제하면 결제 프로세스가 다 될 때까지 기다리지 않고 다른 작업을 할 수도 있다.
+async 예를 들자면 카드 결제하면 결제 프로세스가 다 될 때까지 기다리지 않고 다른 작업을 할 수도 있다.
 
-synch 예시를 들면 그러나 마트 가서 현금을 내면 현금을 거슬러 줄 때 가지 아무것도 못한다.
+sync 예시를 들면 그러나 마트 가서 현금을 내면 현금을 거슬러 줄 때 가지 아무것도 못한다.
 
-A callback function is a function that is passed as an argument to another function, to be “called back” at a later time. A function that accepts other functions as arguments is called a higher-order function, which contains the logic for when the callback function gets executed.
+콜백 함수는 다른 함수에 대한 인수로서 전달되는 함수로서, 나중에 "뒤로 호출"하는 기능이다. 다른 기능을 인수로 받아들이는 함수를 고차 함수라고 하는데,콜백 함수가 실행될 때의 논리를 담고 있다.  
 
-A callback function is a function passed into another function as an argument, which is then invoked inside the outer function to complete some kind of routine or action
-
-콜백은 함수 안에 함수를 전달인자로 보내고 그래서 나중에 쓸 수 있게끔 함.
+콜백은 함수 안에 함수를 전달인자로 보내고 그래서 나중에 쓸 수 있게끔 한다.
 
 ``` javascript
 function serverRequest(query, callback){
@@ -85,7 +83,7 @@ console.log('4')
 
 setTimeout function 또한 callback의 한 종류이다.
 
-callback로 하면 a->b->c->d로 갈려고 하면 
+callback로 하면 a->b->c->d로 갈려고 하면
 a(b(c(d))) 가 되므로 결국엔 콜백헬이 된다.
 
 Promise
