--- a/_posts/post/2019-12-22-NPM.md
+++ b/_posts/post/2019-12-22-NPM.md
@@ -7,9 +7,9 @@ category: posts
 
 Node Package Manager
 
-NPM 은 node.js의 모듈들을 패키징을 하고 npm으로 관리 및 배포해주는 것이다. 그래서 다른 사람들이 만든 node.js 모듈들을 npm 을 통해서 설치가 가능하다.
+NPM 은 Node.js의 모듈들을 패키징을 하고 NPM으로 관리 및 배포해주는 것이다. 그래서 다른 사람들이 만든 Node.js 모듈들을 NPM을 통해서 설치가 가능하다.
 
-npm 설치 방법
+NPM 설치 방법
 
 <https://poiemaweb.com/nodejs-npm>
 
