--- a/_posts/study/2019-12-22-study.md
+++ b/_posts/study/2019-12-22-study.md
@@ -35,7 +35,7 @@ API는 프로그램을 위한 인터페이스이다.
 
 웹의 API를 웹 서비스라고도 한다. 예를 들어 보자면 특정한 사이트에서 회원 로그인 할 떄 타 사이트 아이디로 로그인하는 기능들.
 
-# ch1-3 웹을 지탱하는 기술
+### 웹을 지탱하는 기술
 
 제일 기본적인 구조의 웹은 URI(Uniform Resource Identifier), HTTP(Hypertext Transfer Protocol), HTML(HyperText Markup Language)로 이루어져 있다.
 
