--- a/_posts/TIL/2019-12-20-TIL.md
+++ b/_posts/TIL/2019-12-20-TIL.md
@@ -1,149 +1,94 @@
 ---
 layout: TIL
-title: "19-12-20"
+title: "19-12-23"
 category: TIL
 description: ''
 ---
 
+오늘은 import export를 따로 적어서 실행도 해보고  
 
-sync는 결괏값이 올 때까지 기다린다.
+## module.exports 와 exports 와 export
 
-asyc는 결괏값이 안 와도 다른 작업을 실행할 수 있다.
+module.exports 와 exports는 node.js 가 쓰인 곳에서 export 기능이 필요할때 쓴다. 그냥 export는 현제 지원 안 한다고 한다.
 
-async 예를 들자면 카드 결제하면 결제 프로세스가 다 될 때까지 기다리지 않고 다른 작업을 할 수도 있다.
+module.export 와 export 은 대략적으로 비슷하다고 할 수 있지만 제일 큰 차이는 밑의 예제와 같다고 볼 수 있다.
 
-sync 예시를 들면 그러나 마트 가서 현금을 내면 현금을 거슬러 줄 때 가지 아무것도 못한다.
+```javascript
+//page2.js
 
-콜백 함수는 다른 함수에 대한 인수로서 전달되는 함수로서, 나중에 "뒤로 호출"하는 기능이다. 다른 기능을 인수로 받아들이는 함수를 고차 함수라고 하는데,콜백 함수가 실행될 때의 논리를 담고 있다.  
+    exports = () => { console.log("Foo") };
+     module.exports = () => { console.log("Bar") };
 
-콜백은 함수 안에 함수를 전달인자로 보내고 그래서 나중에 쓸 수 있게끔 한다.
+//app.js
 
-``` javascript
-function serverRequest(query, callback){
-    setTimeout(function(){
-        console.log('1')
-        var response = query + "full!";
-        console.log('2')
-        callback(response);
-        console.log('3')
-    },5000);
-}
-console.log('4')
-function getResults(results){
-    console.log("Response from the server: " + results);
-}
-console.log('5')
-serverRequest("The glass is half ", getResults);
-console.log('6')
-// 4
-// 5
-// 6
-// 1
-// 2
-// Response from the server: The glass is half full!
-// 3
+    const myFunc = require("./page2");
+      myFunc();    //output : Bar
 
-function serverRequest(query, callback){
-    console.log('1')
-    var response = query + "full!";
-    console.log('2')
-    callback(response);
-     console.log('3')
-}
-
-console.log('4')
-
-function getResults(results){
- console.log("Response from the server: " + results);
-}
-console.log('5')
-serverRequest("The glass is half ", getResults);
-console.log('6')
-// Result in console after 5 second delay:
-// Response from the server: The glass is half full!
-//   4
-//   5
-//   1
-//   2
-// Response from the server: The glass is half full!
-//   3
-//   6
-
-setTimeout(function(){
-    console.log('1')
-    },0);
-console.log('2')
-console.log('3')
-console.log('4')
-//2
-//3
-//4
-//1
 ```
 
-setTimeout function 또한 callback의 한 종류이다.
+```javascript
+    exports = function(){
+        console.log('Tada');
+    }
+    console.log(exports); // [Function]
+    console.log(module.exports); // {}
 
-callback로 하면 a->b->c->d로 갈려고 하면
-a(b(c(d))) 가 되므로 결국엔 콜백헬이 된다.
-
-Promise
-``` javascript
- let promise = new Promise(function(resolve, reject) {
-    setTimeout(() => resolve("done!"), 1000);
-      });
-      // resolve runs the first function in .then
-      promise.then(
-        result => alert(result +1), // shows "done!" after 1 second
-        error => alert(error +2) // doesn't run
-      );
-    // shows "done!1" after 1 second
 ```
 
-그래서 나온 게 promise 이긴 한데 
-promise a.then(c) =>).then .... 해서 길어지면 치기 힘들어진다 그래서 결국에 나온 게 Async Await
+'='를 쓰는 순간 reference 가 달라지므로 결국엔 두 개는 다른게 된다.
 
-await promise1
-await promise2
-await promise3
+```javascript
+    exports.tada = function(){
+        console.log('Tada');
+    }
 
-등
+    console.log(exports);
+    console.log(module.exports);
+```
 
-reference:
+로 하면 같다.
 
-[https://medium.com/javascript-in-plain-english/truly-understanding-promises-in-javascript-cb31ee487860](https://medium.com/javascript-in-plain-english/truly-understanding-promises-in-javascript-cb31ee487860)
+## Express
 
-[https://medium.com/javascript-in-plain-english/async-await-javascript-5038668ec6eb](https://medium.com/javascript-in-plain-english/async-await-javascript-5038668ec6eb)
+NodeJS를 쓰면 웹서버를 쉽게 구축을 할 수 있는데 그것을 하기 위해서 쓰는 웹 프레임워크 중 하나가 Express이다.
 
-<https://guide.freecodecamp.org/javascript/callback-functions/>
+```javascript
+const express = require('express');
+const app = express();
+```
 
-<https://javascript.info/promise-basics>
+로 초기 설정해주면 된다.
 
-<https://en.wikipedia.org/wiki/Callback_(computer_programming)>
+## CORS
 
-<https://joshua1988.github.io/web-development/javascript/promise-for-beginners/#%ED%94%84%EB%A1%9C%EB%AF%B8%EC%8A%A4-%EC%BD%94%EB%93%9C---%EA%B8%B0%EC%B4%88>
+Cross Origin Resource Sharing의 약자를 쓰는데 이것의 주 기능은 현제 도메인이 아닌 다른 도메인의 리소스를 요청 및 전송 등을 할 수 있게 해준다.
+
+## Middleware
+
+미들웨어(Middleware)는 시스템 부품이 데이터를 통신하고 관리할 수 있도록 하는 모든 소프트웨어 또는 서비스를 일컫는 말이다. 구성 요소와 입력/출력 간의 통신을 처리한다
 
 ---
 
 ### Feelings
 
-역시 코딩은 어렵네요 힘듭니다
+늦게 자서 피곤하네요.
 
 ---
 
 ### Findings
 
-코드들을 쉬운 것부터 해야지 배울 수 있다고 알았습니다.
+일찍 자지 않으면 컨디션이 너무 안 좋아지네요.
 
 ---
 
 ### Future Action Plan
 
-쉬운 코드를 같은 것을 계속 보면서 다른 방법으로 풀어보겠습니다.
+일찍 자도록 하겠습니다.
 
 ---
 
 ### Feedback
 
-열심히 하도록.
+지킬건 지키도록.
 
 ---
