--- a/_posts/TIL/2019-12-24-TIL.md
+++ b/_posts/TIL/2019-12-24-TIL.md
@@ -5,30 +5,61 @@ category: TIL
 description: ''
 ---
 
+### Fact
 
+**HTTP methods**  
+**GET**  
+GET 메소드는 특정 리소스의 표시를 요청합니다. GET을 사용하는 요청은 오직 데이터를 받기만 합니다.
+**HEAD**  
+HEAD 메소드는 GET 메소드의 요청과 동일한 응답을 요구하지만, 응답 본문을 포함하지 않습니다.
+**POST**  
+POST 메소드는 특정 리소스에 엔티티를 제출할 때 쓰입니다. 이는 종종 서버의 상태의 변화나 부작용을 일으킵니다. 
+**PUT**  
+PUT 메소드는 목적 리소스 모든 현재 표시를 요청 payload로 바꿉니다.
+
+**DELETE**  
+DELETE 메소드는 특정 리소스를 삭제합니다. 
+**CONNECT**  
+CONNECT 메소드는 목적 리소스로 식별되는 서버로의 터널을 맺습니다.
+
+**OPTIONS**  
+OPTIONS 메소드는 목적 리소스의 통신을 설정하는 데 쓰입니다.
+**TRACE**  
+TRACE 메소드는 목적 리소스의 경로를 따라 메시지 loop-back 테스트를 합니다.
+**PATCH**  
+PATCH 메소드는 리소스의 부분만을 수정하는 데 쓰입니다.
+
+
+**미들웨어**  
+
+미들웨어(Middleware)는 시스템이 데이터를 통신과 관리를 해주는 프로그램이나 서비스다. 부품과 입출력 간의 통신을 처리하는 소프트웨어로, 개발자는 애플리케이션의 구체적인 목적에 집중할 수 있다. 입출력과 요소들 간의 통신을 다루는 소프트웨어이다.
+
+서버 측 웹 애플리케이션 프레임워크에서는 보통 request/response 프래임워크를에 추가할 수 있는 소프트웨어 요소들을 말한다. 예를 들어서 데이터배이스 액세스.
+
+다른 말로는 미들웨어는 request/response 객체 사이에서 지정 작업을 처리해주는 역할을 합니다
 
 ---
 
 ### Feelings
 
-늦게 자서 피곤하네요.
+크리스마스 이브~
 
 ---
 
 ### Findings
 
-일찍 자지 않으면 컨디션이 너무 안 좋아지네요.
+크리스마스 이브다!
 
 ---
 
 ### Future Action Plan
 
-일찍 자도록 하겠습니다.
+다음엔 크리스마스 이브 즐겨보도록
 
 ---
 
 ### Feedback
 
-지킬건 지키도록.
+크리스마스 이브!
 
 ---
