--- a/_posts/TIL/2019-12-27-TIL.md
+++ b/_posts/TIL/2019-12-27-TIL.md
@@ -13,7 +13,7 @@ description: ''
 
 <https://programmers.co.kr/learn/courses/30/lessons/42862>
 
-babel은 컴파일러이지만 역할은 transpiler에 더 가깝다.  
+babel은 컴파일러가 아니라 transpiler이다.  
 
 컴파일러를 쉽게 말하면 우리가 쓰는 코드들을 기계가 알아듣게끔 기계어로 바꿔 주는 게 컴파일러이다.
 
