checking git status

--- a/_posts/TIL/2019-12-31-TIL.md
+++ b/_posts/TIL/2019-12-31-TIL.md
@@ -8,7 +8,7 @@ description: ''
 
 ### Fact
 
-- 체육복 문제를 도움 받아서 고쳤습니다. 들어오는 배열들이 sorting 이 됬다고 가정하에 작성을 했는데 실제로 안되서 sorting을 해서 올렸더니 되네요  
+- 체육복 문제를 도움 받아서 고쳤습니다. 들어오는 배열들이 sorting 이 됬다고 가정하에 작성을 했는데 실제로 안되서 sorting을 해서 올렸더니 되네요.
 
 - react에 대하여 더 공부를 했습니다
 
