--- a/_posts/TIL/2019-12-31-TIL.md
+++ b/_posts/TIL/2019-12-31-TIL.md
@@ -8,40 +8,27 @@ description: ''
 
 ### Fact
 
-- 체육복 문제를 도움 받아서 고쳤습니다. 들어오는 배열들이 sorting 이 됬다고 가정하에 작성을 했는데 실제로 안되서 sorting을 해서 올렸더니 되네요.
-
-- react에 대하여 더 공부를 했습니다
-
-- hook에 있는 useState 와 useEffect 에 대하여 더 알아봤습니다.
-
-- hook을 안쓰는 간단한 예제를 hook을 쓰게끔 바꿔서 작성을 했습니다.
-
-- hook을 안쓰는 ticktacktoe 예제를 큰 덩어리체로 hook을 쓰는 방식으로 바꿔 볼려다가 망했습니다.
+<li>체육복 문제를 도움 받아서 고쳤습니다. 들어오는 배열들이 sorting 이 됬다고 가정하에 작성을 했는데 실제로 안되서 sorting을 해서 올렸더니 되네요.</li>
+<li>react에 대하여 더 공부를 했습니다</li>
+<li>hook에 있는 useState 와 useEffect 에 대하여 더 알아봤습니다.</li>
+<li>hook을 안쓰는 간단한 예제를 hook을 쓰게끔 바꿔서 작성을 했습니다.</li>
+<li>hook을 안쓰는 ticktacktoe 예제를 큰 덩어리체로 hook을 쓰는 방식으로 바꿔 볼려다가 망했습니다.</li>
 
 ## Feelings
-
-- 체육복 풀고 있을때 주어진 테스트 코드가 다 sort된 배열들이라서 당연히 sort 됬다는 가정하에 코딩을 했었는데 거하게 뒤통수 맞았네요.
-
-- react hook의 useState 와 useEffect 를 대충 어떻게 쓰는지는 알겠는데 막상 쓰라고 하니깐 너무 어렵네요.
-
-- 큰거 통체로 hook 을 사용 하는 방식으로 바꿀려다가 멘탈 터졌네요.
+<li>체육복 풀고 있을때 주어진 테스트 코드가 다 sort된 배열들이라서 당연히 sort 됬다는 가정하에 코딩을 했었는데 거하게 뒤통수 맞았네요.</li>
+<li>react hook의 useState 와 useEffect 를 대충 어떻게 쓰는지는 알겠는데 막상 쓰라고 하니깐 너무 어렵네요.</li>
+<li>큰거 통체로 hook 을 사용 하는 방식으로 바꿀려다가 멘탈 터졌네요.</li>
 
 ## Findings
-
-- 모든것을 의심하고 가정을 하면서 해야지만 된다는 것을 알게 되었습니다.
-
-- 예제를 보면서 이론을 공부 하니 대충 어떻게 쓰는지 더 쉽게 알게 되었습니다.
-
-- 큰거 통쨰로 바꾸는게 생각 보다 쉽지가 않네요.
+<li>모든것을 의심하고 가정을 하면서 해야지만 된다는 것을 알게 되었습니다.</li>
+<li>예제를 보면서 이론을 공부 하니 대충 어떻게 쓰는지 더 쉽게 알게 되었습니다.</li>
+<li>큰거 통쨰로 바꾸는게 생각 보다 쉽지가 않네요.</li>
 
 ## Future Action
 
-- 주어진 것 자체도 의심하고 고려를 해야한다.
-
-- 예제랑 이론 같이 열심히 보겠다.
-
-- 작은것 부터 아니면 분할 해서 보도록 하겠다.
+<li>주어진 것 자체도 의심하고 고려를 해야한다.</li>
+<li>예제랑 이론 같이 열심히 보겠다.</li>
+<li>작은것 부터 아니면 분할 해서 보도록 하겠다</li>
 
 ### Feedback
-
-열심히 하도록.
+<li>열심히 하도록.</li>
