--- a/_posts/TIL/2020-01-01-TIL.md
+++ b/_posts/TIL/2020-01-01-TIL.md
@@ -6,15 +6,25 @@ description: ''
 ---
 
 ## Fact  
- - asd
- - asd
- -asdasds
 
+- 채육복을 forloop를 안쓰고 작성을 할려고 했는데 반은 성공 했지만 반은 못했습니다.
+- 최대공약수와 최소공배수 문제를 풀었습니다.
 
 ## Feelings  
 
+- forloop를 벗어 날려고 하니깐 너무나도 힘드네요.
+- forloop는 볌용성이 좋아서 여기 저기 붙여 넣기 너무 쉽나도 느끼네요.
+- 최대공약수와 최소공배수 레벨 1 답게 쉽네요.
+- 실력차가 많이 나는 분과 하는 짝프랑 비슷한 사람들이랑 하는 짝프는 너무나도 다르다고 느낍니다. 실력차가 너무 나면 그냥 끌려 다니거나 억지로 따라 잡을려는 느낌이지만 실력차가 비슷하면 뭔가 같이 헤처나가는 느낌??
+
 ## Findings  
 
-## Future Action  
+- forloop를 벗어 날려고 하니깐 많이 막혀요.
+- 실력차 많이 나는 사람이랑 짝프 하면 많이 배우지만 뭔가 성취감은 없다. 반대로 비슷 하면 뭔가 풀면 성취감이 있다.
+
+## Future Action
+
+- forloop를 벗어 나기 위해 다른 사람 코드 보면서 공부 하겠습니다.
+- 짝프 할때 실력이 많이 차이 나는 분이랑 하면 골을 빨아 먹고 비슷한 사람이랑 할때는 열심히 배운걸 쓰겠습니다.
 
 ### Feedback  
