--- a/_posts/TIL/2020-01-03-TIL.md
+++ b/_posts/TIL/2020-01-03-TIL.md
@@ -7,7 +7,7 @@ description: ''
 
 ## Fact  
 
-- 오늘의 목표인 reac-todolist를 외우기를 실패를 하였습니다.
+- 오늘의 목표인 react-todolist를 외우기를 실패를 하였습니다.
 - 정수 제곱근 판별 algorithm을 풀었습니다.
 
 ## Feelings  
