--- a/_posts/study/2020-01-05-study-ch10-11.md
+++ b/_posts/study/2020-01-05-study-ch10-11.md
@@ -10,12 +10,13 @@ HTML의 구성 요소
 HTML의 기본적인 구성요소는 헤더와 바디. 헤더는 문서의 메타 데이터, 바디는 문서의 내용.
 
 **헤더**
-|요소|의미|
-|---|---|
-|title| 문서의 타이틀
-|link| 다른 리소스로의 링크
-|script| javaScript 등의 클라이언트 사이드 프로그램
-|meta| 그 밖의 파라미터
+
+| 요소|의미  |
+|---|:--|
+| title | 문서의 타이틀 |
+| link | 다른 리소스로의 링크 |
+| script | javascript 등의 클라이언트 사이드 프로그램 |
+|  meta  | 그 밖의 파라미터 |
 
 바디 요소는 블록 레벨과 인라인 요소가 있다. 블록 레벨 요소는 문서의 단락과 표제 등 어느 정도 큰 덩어리를 표현한다. 인라인 요소는 블록 레벨 요소 안에 들어가는 요소를 강조나 줄 바꿈, 이미지 삽입등을 표현한다.
 
