Fix 2020-01-16-TIL.md spelling
Spelling fixes

--- a/_posts/TIL/2020-01-16-TIL.md
+++ b/_posts/TIL/2020-01-16-TIL.md
@@ -8,14 +8,14 @@ description: ''
 ## Facts
 
 - 프로젝트 edit component를 만들었습니다.
-  - 포스트글 옆에 수정창과 버튼 만듬
-    - 수정창에 입력후 버튼 누르면 수정이 됨.
-  - 댓글창 옆에 수정창과 버튼 만듬
-    - 수정창에 입력 후 버튼 누름면 수정이 됨.
+  - 포스트 글 옆에 수정에 창과 버튼 만듦
+    - 수정에 창에 입력 후 버튼 누르면 수정이 됨.
+  - 댓글 창 옆에 수정에 창과 버튼 만듦
+    - 수정에 창에 입력 후 버튼 누르면 수정이 됨.
 - 에러
   - #1 렌더링 후 입력창 초기화 안됨(못함 기능 삭제함 추후 추가)
-  - #3 삭제 버튼을 누른 후 렌더링은 됨 데이터는 수정이 됬음-> 다른 곳의 렌더링을 하면 삭제되는 게 보임.(수정 완료)
-  - #4 uncontrolled가 controlled 로 바뀌거나 그 반대일 경우에 뜨는 경고창. (수정 완료)
+  - #3 삭제 버튼을 누른 후 렌더링은 됨 데이터는 수정이 됐음-&gt; 다른 곳의 렌더링을 하면 삭제되는 게 보임.(수정 완료)
+  - #4 uncontrolled가 controlled로 바뀌거나 그 반대일 경우에 뜨는 경고 창. (수정 완료)
 
 ## Feelings
 
@@ -23,13 +23,13 @@ description: ''
 
 ## Findings
 
-- edit component를 재활용 하기 위해서 썼는데 포스팅이랑 코멘트 저장하는 형태와 출력하는 형태가 달라서 재활용을 좀 억지로 했는데 맞추는게 힘드네요.
-- 에러 #4 dom에서 만든값인 uncontrolled와 react로 만든 controlled component를 반대로 바꿀려면 경고창이 뜸니다.
+- edit component를 재활용하기 위해서 썼는데 포스팅이랑 코멘트 저장하는 형태와 출력하는 형태가 달라서 재활용을 좀 억지로 했는데 맞추는 게 힘드네요.
+- 에러 #4 dom에서 만든 값인 uncontrolled와 react로 만든 controlled component를 반대로 바꾸려면 경고 창이 뜹니다.
 
 ## Future Action
 
-- 에러 #1 번 다시 추가 해보기.
-- 시간 나면 post commponent를 재활용 해서 comment 기능을 작성 해보기(다시 다 처음부터 해야 할수도 있음.)
+- 에러 #1 번 다시 추가해보기.
+- 시간 나면 post commponent를 재활용해서 comment 기능을 작성해보기(다시 다 처음부터 해야 할 수도 있음.)
 - 프로젝트에 살 붙이기용 계획 짜기.
 
 ## Feedback
