--- a/_posts/TIL/2020-01-17-TIL.md
+++ b/_posts/TIL/2020-01-17-TIL.md
@@ -14,7 +14,7 @@ description: ''
     - 댓글 후 댓글 창 초기화(기능은 돌아 갔으나 uncontrolled 에러 떠서 포기했었음)
   - link router 적용 계획
     - 포스팅 누르면 그 포스트에 대한 상세 페이지로 이동하는 것을 구현하려고 함.
-      - 하다가 망함. 컴포넌트를 적절히 이용해서 원하는 아이디 값을 보내서 그 컴포넌트 실행하면 되겠지만 머리가 안 돌아가서 못했음.
+      - 하다가 망함. 컴포넌트를 적절히 이용해서 원하는 값을 보내서 그 컴포넌트 실행하면 되겠지만 머리가 안 돌아가서 못했음.
 
 ## Feelings
 
@@ -67,5 +67,6 @@ Home About Users 을 누르면 각각 "/" "/about" "/Users"로 이동이 된다.
 - #1 에러 떴던 기능 다시 작성
 - link router 적용
 - 멀티태스킹 능력 기르기
+- 블로그 테마 바꾸기
 
 ## Feedback
