--- a/content/til/2020-01-27-TIL .md
+++ b/content/til/2020-01-27-TIL .md
@@ -9,8 +9,8 @@ description: ''
 
 - 블로그 테마를 변경을 계속 했습니다.
   - side menu에
-    - til 추가
-    - study 추가
+    1. til 추가
+    2. study 추가
 
 ## Feelings
 
@@ -24,9 +24,9 @@ description: ''
 
 - 블로그
   - 해야 할것들
-    - disqus 연결
-    - google analytic 추가
-    - til index pagination
-    - studyt index pagination
+    1. disqus 연결
+    2. google analytic 추가
+    3. til index pagination
+    4. studyt index pagination
 
 ## Feedback
