--- a/content/til/2020-01-27-TIL .md
+++ b/content/til/2020-01-27-TIL .md
@@ -7,14 +7,14 @@ description: ''
 
 ## Facts
 
-- 블로그 테마를 변경을 계속 했습니다.
-  - side menu에
-    1. til 추가
-    2. study 추가
+블로그 테마를 변경을 계속했습니다.
+- side menu에
+  - til 추가
+  - study 추가
 
 ## Feelings
 
-- 할께 너무 많다고 느껴집니다.
+- 할게 너무 많다고 느껴집니다.
 
 ## Findings
 
@@ -22,11 +22,12 @@ description: ''
 
 ## Future Action
 
-- 블로그
-  - 해야 할것들
-    1. disqus 연결
-    2. google analytic 추가
-    3. til index pagination
-    4. studyt index pagination
+블로그
+- 해야 할 것들
+  - disqus 연결
+  - google analytic 추가
+  - til index pagination
+  - studyt index pagination
+  - til 날짜 수정
 
 ## Feedback
