--- a/content/til/2020-01-28-TIL.md
+++ b/content/til/2020-01-28-TIL.md
@@ -12,6 +12,7 @@ description: ''
 - child 키값 중복 에러 해결(오타였음)
 - 포스트 글마다 해당 유저의 프로필 사진과 이름을 구현
 - 링크 클릭하면 화면 위치를 위로 가게끔 만들었습니다.
+- globalUser 만들어서 현제 누가 페이지를 보고 있는지에 따라 모든것을 수정했습니다.
 - eslint
   - props validation 하는 중입니다
 
