--- a/content/til/2020-01-30-TIL.md
+++ b/content/til/2020-01-30-TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: TIL
-title: &quot;20-01-30&quot;
+title: "20-01-30"
 template: til
 description: ''
 ---
@@ -36,7 +36,7 @@ description: ''
 
 프로젝트
 
-- 때 댓글
+- 대댓글
 - 댓글에 지우기 넣을 것
 - 댓글에 좋아요 넣을 것
 - follower이 비면 에러가 뜨는데(특히 신규 유저 만들 때) 그래서 초깃값 하나를 넣었다.(추후 수정 필요할 시 수정하도록)
