--- a/content/til/2020-01-31-TIL.md
+++ b/content/til/2020-01-31-TIL.md
@@ -17,7 +17,7 @@ description: ''
 - &lt;https://programmers.co.kr/learn/courses/30/lessons/42889&gt;
   - 제시간에 못 풀었습니다.
   - edge case인 같은 경우에 sort를 안 했네요
-  - 알고도 못했네요
+  - 알고도 못했지만 나중에 풀이를 해주신 거 보고 나서 수정해서 제출했네요.
 - &lt;https://programmers.co.kr/learn/courses/30/lessons/42746&gt;
   - 한 번 더 풀어 봤습니다.
   - arrayFrom, parseInt 써봤습니다.
