--- a/content/til/2020-01-31-TIL.md
+++ b/content/til/2020-01-31-TIL.md
@@ -20,7 +20,7 @@ description: ''
   - 알고도 못했지만 나중에 풀이를 해주신 거 보고 나서 수정해서 제출했네요.
 - &lt;https://programmers.co.kr/learn/courses/30/lessons/42746&gt;
   - 한 번 더 풀어 봤습니다.
-  - arrayFrom, parseInt 써봤습니다.
+  - Array.from(), parseInt 써봤습니다.
 
 ## Feelings
 
@@ -29,7 +29,7 @@ description: ''
 ## Findings
 
 - 사람은 먹어봐야지만 뭐가 쓴 지 알게 되는군요.
-- arrayFrom은 문자열을 split처럼 배열로 만들던가 map으로 작동을 하는 것을 봤습니다.
+- Array.from()은 문자열을 split처럼 배열로 만들던가 map으로 작동을 하는 것을 봤습니다.
 - parseInt를 나눌 때 정수로 만들기 위해서 썼습니다. 문제를 풀 때 쓰는 것을 봤습니다. 다음에 조금 더 알아보도록 하겠습니다.
 
 ## Future Action
@@ -38,7 +38,10 @@ description: ''
 
 - 대댓글 추가
 - 댓글에 좋아요 넣을 것
-- arrayFrom, parseInt에 대하여 더 알아보도록.
-- 블로그 disqus, google analytic, 프로필 사진 추가.
+
+그외
+
+- Array.from(), parseInt에 대하여 더 알아보도록.  
+- 블로그 disqus, google analytic, 프로필 사진 추가.  
 
 ## Feedback
