Move content of future action and add things to do later
Future action is for retrospect

Things to do later for later purpose

--- a/content/til/2020-01-31-TIL.md
+++ b/content/til/2020-01-31-TIL.md
@@ -34,6 +34,12 @@ description: ''
 
 ## Future Action
 
+프로젝트를 하면서 그 상황에서는 상관없어서 id 값을 대충 주거 그 기반으로 모든 것을 만들었는데 이번에 그 id 값으로 할 수가 없어서 바꾸게 되면서 그 기반으로 쌓은 모든 것들을 바꿔야 했습니다. 이로 나중에 혹시나 이러한 상황에서는 대충 하지 말고 꼼꼼히 합시다. 또한 eslint 대충 하다가 결국엔 나중에 시간만 배로 허비해서 lint를 돌렸죠.
+
+## Feedback
+
+## Things to do later
+
 프로젝트
 
 - 대댓글 추가
@@ -43,5 +49,3 @@ description: ''
 
 - Array.from, parseInt, Math.round, Math.ceil, Math.floor 에 대하여 더 알아보도록.  
 - 블로그 disqus, google analytic, 프로필 사진 추가.  
-
-## Feedback
