--- a/content/til/2020-02-14-TIL.md
+++ b/content/til/2020-02-14-TIL.md
@@ -21,13 +21,13 @@ description: ''
 ## Findings
 
 - flex는 1차원으로 모든 것을 표현을 한다. 
-- justify-content: content를 정의에 따라 x축에서 이동
+- justify-content: 요소를 정의에 따라 x축에서 이동
   - flex-start: 요소들을 컨테이너의 왼쪽으로 정렬
   - flex-end: 요소들을 컨테이너의 오른쪽으로 정렬
   - center: 요소들을 컨테이너의 가운데로 정렬
   - space-between: 요소들 사이에 동일한 간격을 둠
   - space-around: 요소들 주위에 동일한 간격을 둠
-- align-items: content를 정의에 따라 y축에서 이동
+- align-items: 요소를 정의에 따라 y축에서 이동
   - flex-start: 요소들을 컨테이너의 꼭대기로 정렬
   - flex-end: 요소들을 컨테이너의 바닥으로 정렬
   - center: 요소들을 컨테이너의 세로선 상의 가운데로 정렬
