--- a/content/til/2020-02-14-TIL.md
+++ b/content/til/2020-02-14-TIL.md
@@ -20,7 +20,7 @@ description: ''
 
 ## Findings
 
-- flex는 1차원으로 모든 것을 표현을 한다. 
+flex는 1차원으로 모든 것을 표현을 한다.
 - justify-content: 요소를 정의에 따라 x축에서 이동
   - flex-start: 요소들을 컨테이너의 왼쪽으로 정렬
   - flex-end: 요소들을 컨테이너의 오른쪽으로 정렬
