--- a/content/til/2020-02-18-TIL.md
+++ b/content/til/2020-02-18-TIL.md
@@ -10,20 +10,27 @@ description: ''
 프로젝트
 
 css
-- 포스트에 css 적용을 했습니다. like를 하트로 바꾸고 사진, 유저 이름, 유저 사진 등등의 넓이들을 수정했다. 그리고 위에 헤더를 추가하고 있다.
+
+- logout 용 css 설정, 타임라인 페이지 flex로 조정.
+- css library 와 기본 library를 혼합 사용을 해봤다.
+- css Cascading에 대하여 알아봤다.
 
 ## Feelings
 
-- css 너무 어렵다. 리액트 처음 만졌을 때의 느낌...
+- css 너무 어렵다.
 
 ## Findings
 
-- padding은 범위 안쪽의 넓이 조정
-- margin은 범위 바깥쪽의 넓이 조정
-- svg 와 그 속성 d path로 이미지로 만들 수 있다
+css가 cascading style sheet인데 이 css는 cascading order를 갖는다. 어떤 거가 적용되는지는
+
+- 순서에 따라 어떤 게 적용되는지 달라진다.
+- 명확하게 특정할수록 명시도가 높아지고 우선순위가 높아진다.
+- 선언된 순서에 따라 우선순위가 적용된다. 즉, 나중에 선언된 스타일이 우선 적용된다.
+
+css 파일 안에 넣으면 순서 되로 되긴 하는데 이게 css library인 emotion core 을 직접 쓰면 꼬이는 듯. 나중에 다시 확인해봐야겠다.
 
 ## Future Action
 
-- 혼자 어떻게 이쁘게 만들지 몰라서 다른 sns 사이트를 참고를 했다. 역시 따라 하는 게 마음 편하고 대중적인 사이트 가면 그 디자인이 대중적이라서 쓰는 거니 그냥 쓰면 무난하게 느껴지겠지? 고로 난 다른 인기 있는 사이트를 들어가서 베끼겠다.
+- 연습과 편의성을 위해서 css library랑 순수 css 를 섞어 썼는데 뭔가 cascading order이 너무 꼬였다. 그냥 하나로 통일 하던가 해야겠다.
 
 ## Feedback
