Upload missing file

--- a/content/til/2020-02-14-TIL.md
+++ b/content/til/2020-02-14-TIL.md
@@ -63,7 +63,7 @@ grid는 2차원으로 표현. table로 형성되어 있다.
 - grid-template-row: 그리드 행 크기와 명칭을 정의  
 (grid-template-rows: 20% 20% 20% 20% 20% 이면 화면의 20%를 차지하는 5개의 행을 만듦)
   - 20% 대신해서 100px(말 그대로 픽셀) 3em(해당 폰트의 대문자 M의 너비) 1fr(fraction, 1/n 개의 열 만큼 사이즈를 차지함)
-- grid-template: 위 row와 column를 섞어서 만든 명령어. (grid-template: 50% 50% / 200px   행/열)
+- grid-template: 위 row와 column를 섞어서 만든 명령어. (grid-template: 50% 50% / 200p 열)
 
 ## Future Action
 
