--- a/content/til/2020-02-20-TIL .md
+++ b/content/til/2020-02-20-TIL .md
@@ -24,16 +24,16 @@ css
 
 이것을 해결해주는 방법은 3가지가 있다.
 
-1. Hash History
+1. Hash History  
 hash history를 쓰면 url 들이 # 가 들어간 http://local8080.com/#/about 등이 된다. 서버로 # 이후의 값들이 안 보내지고 그전인 http://local8080.com/ 만 보내지고 그다음 about은 react router이 나머지 조작을 한다.
 
-2. Catch-all
-/* 값들을 서버가 다 잡아서 index.html에 보낸다. 위와 같은 기능을 한다.
+2. Catch-all  
+/* 값들을 서버가 다 잡아서 index.html에 보낸다. 그 외에는 위와 같은 기능을 한다.
 
-3. Hybrid
+3. Hybrid  
 Catch-all를 쓰지만 특정 경로에 대한 특정 스크립트 추가를 하는 것이다. 간단한 PHP 스크립트를 만들어 콘텐츠가 포함된 사이트의 가장 중요한 페이지를 반환할 수 있으므로 Googlebot은 최소한 페이지의 내용을 볼 수 있다.
 
-4. Isomorphic
+4. Isomorphic  
 양쪽 끝에서 동일한 JS 코드를 실행할 수 있도록 Node JS를 서버로 사용하면 모든 경로를 하나의 react-router 구성으로 정의하고 있으며, rendering 코드를 복제할 필요가 없다. 서버는 클라이언트가 페이지 전환할 때와 동일한 마크업을 보낸다
 
 그 서버는 만약 페이지 전환이 클라이언트에서 일어났다면 우리가 끝냈을 때와 똑같은 마크를 보낸다. 이 해결책은 SEO의 면에서는 최적이다.
