--- a/content/til/2020-02-26-TIL .md
+++ b/content/til/2020-02-26-TIL .md
@@ -13,7 +13,7 @@ description: ''
 - SearchPage 작성중(현제까지 한것- 페이지에 모든 포스팅들 나오게끔 만듦. css로 타일 형태로 나오게끔 만듦.)
 - 링크 에러 수정
 - post마다 태그 추가함.
-- 이미지 추가하는 거 https://www.youtube.com/watch?v=b6Oe2puTdMQ 따라 해서 작동 잘 되는 거 확인함.
+- 이미지 추가하는 거 https://www.youtube.com/watch?v=b6Oe2puTdMQ 참고 해서 작동 잘 되는 거 확인함.
 
 해야 할것
 
